Make calculator bigger and limit result to prevent overflow

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     /* border: 2px solid white; */
     border-radius: 10px;
     min-height: 60px;
+    min-width: 250px;
     font-size: 50px;
     font-family: monospace;
     margin-top: 90px;
@@ -25,6 +26,7 @@ body {
     margin-right: 5px;
     overflow: auto;
     padding: 0px 10px;
+    text-align: right;
 }
 
 .calculator {
@@ -43,7 +45,7 @@ body {
 }
 
 button {
-    padding: 7px 15px;
+    padding: 10px 19px;
     font-family: monospace;
     font-size: 30px;
     border-radius: 10px;
